--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,6 +16,8 @@ spring:
 mybatis:
   configuration:
     map-underscore-to-camel-case: true
+    #console log configuration
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
   mapper-locations: classpath:mapper/*.xml
 logging:
   pattern:
